--- a/transient-0.8.7/CHANGELOG
+++ b/transient-0.8.7/CHANGELOG
@@ -1,4 +1,38 @@
 # -*- mode: org -*-
+* v0.8.7    2025-04-01
+
+- Added new hook ~transient-post-exit-hook~.  55050b60
+
+- ~transient-insert-suffix~ and ~transient-append-suffix~ now signal
+  error if the specified location is invalid.  #374
+
+Bug fixes:
+
+- Autoloaded commands were loaded too late in ~transient-init-suffix~,
+  resulting in the suffix prototype object not being used.  00112c11
+
+* v0.8.6    2025-03-15
+
+Bug fixes:
+
+- ~transient-show-summary~ errored for commands that have neither a
+  summary nor a docstring.  0886651d
+
+- ~transient-format-description~ errored for ~transient-information~
+  and ~transient-information*~ suffixes.  #366
+
+- ~transient--wrap-command~ failed to load autoloaded commands.
+  40308623
+
+- ~transient-suffix-object~ errored if a command is bound more than
+  once and is invoked using the mouse or ~RET~.  f69e1286
+
+- For some releases ~transient-suffix-object~ errored if it could not
+  identify a unique suffix, which helped establish that it is in fact
+  legitimate to use this function as a predicate.  No longer error if
+  there are zero matches, but continue to error if their are multiple
+  matches that cannot be disambiguated.  4a06aeb0
+
 * v0.8.5    2025-03-01
 
 - Added new faces ~transient-key-recurse~ and ~transient-key-stack~.
@@ -19,7 +53,7 @@ Bug fixes:
   when there isn't actually an outer prefix.  e88005d2
 
 - When potentially removing other bindings for the same command
-  while adding a new binding, false-negative avoidance was to heavily
+  while adding a new binding, false-negative avoidance was too heavily
   favored over false-positive avoidance.  #355
 
 - Defining the ~transient-higher-level~ face involves calling
