--- a/marginalia-2.0/CHANGELOG.org
+++ b/marginalia-2.0/CHANGELOG.org
@@ -2,6 +2,11 @@
 #+author: Omar Antolín Camarena, Daniel Mendler
 #+language: en
 
+* Version 2.0 (2025-03-17)
+
+- =marginalia--variable-value=: Add tool tip for integers with hexadecimal, octal
+  and character representation.
+
 * Version 1.8 (2024-12-22)
 
 - Require Emacs 28.1.
