--- a/transient-0.9.3/CHANGELOG
+++ b/transient-0.9.3/CHANGELOG
@@ -1,4 +1,21 @@
 # -*- mode: org -*-
+* v0.9.3    2025-07-01
+
+- Improved kludge to work around a bug in Emacs, which may cause
+  a subprocess to be killed, when the user types ~C-g~, expecting
+  that to quit a transient menu.  #388
+
+- Fixed an edge-case when trying to put point on the same suffix
+  after refreshing the menu.  e508e658
+
+- Removed an unnecessary redraw, which additionally happened too
+  early, before suffixes were refreshed.  #397
+
+* v0.9.2    2025-06-09
+
+- Fixed a regression in v0.9.0, which made it impossible to change the
+  level of a suffix, if that was set inline in the prefix definition.
+
 * v0.9.1    2025-06-03
 
 - As an additional safety measure, unconditionally reset ~inhibit-quit~
