--- a/consult-2.7/CHANGELOG.org
+++ b/consult-2.7/CHANGELOG.org
@@ -2,6 +2,17 @@
 #+author: Daniel Mendler
 #+language: en
 
+* Version 2.7 (2025-08-05)
+
+- ~consult-buffer-list-function~: New customizable variable to support frame or
+  tab isolation (see ~tab-bar-mode~). Set to ~consult--frame-buffer-list~ for frame
+  isolation. Alternatively use buffer functions provided by packages like
+  [[https://github.com/protesilaos/beframe][beframe]].
+- ~consult--source-other-buffer~: Buffer source which lists all buffers which
+  missing from the list returned by ~consult-buffer-list-function~. If buffers are
+  restricted to the current frame or tab by default, then this source will list
+  the buffers belonging to other frames or tabs.
+
 * Version 2.6 (2025-06-28)
 
 - ~consult--read~, ~consult--prompt~: Accept a ~:command~ keyword argument which
